--- a/helloWorld/userProfile/templates/userProfile/addUser.html
+++ b/helloWorld/userProfile/templates/userProfile/addUser.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add User</title>
-</head>
-<body>
-    <h3>Add user</h3>
-<form action="{% url 'userProfile:addUser' %}" method="post">
-    {% csrf_token %}
-    <input type="text" name="name" placeholder="Type user name"><br>
-    <input type="radio" name="gender" value="male"> Male<br>
-    <input type="radio" name="gender" value="female"> Female<br>
-    <input type="number" name="age" placeholder="Type age"><br>
-    <input type="text" name="city" placeholder="Type city"><br>
-    <input type="text" name="country" placeholder="Type country"><br>
-    <input type="text" name="image" placeholder="Image URL"><br>
-    <input type="submit" value="Add">
+{% extends 'userProfile/base.html' %}
+{% block title %}Add user{% endblock %}
 
-</form>
+{% block body %}
+        <h3>Add user</h3>
+    <form action="{% url 'userProfile:addUser' %}" method="post">
+        {% csrf_token %}
+        <input type="text" name="name" placeholder="Type user name"><br>
+        <input type="radio" name="gender" value="male"> Male<br>
+        <input type="radio" name="gender" value="female"> Female<br>
+        <input type="number" name="age" placeholder="Type age"><br>
+        <input type="text" name="city" placeholder="Type city"><br>
+        <input type="text" name="country" placeholder="Type country"><br>
+        <input type="text" name="image" placeholder="Image URL"><br>
+        <input type="submit" value="Add">
 
-</body>
-</html>
+    </form>
+{% endblock %}
